--- a/about.html
+++ b/about.html
@@ -238,11 +238,14 @@
                         </div> -->
                 <div class="founder-content">
                   <div class="founder-title">
-                    <h5>Jhon Doe, <span>Founder</span></h5>
+                    <h5>Michael Hawkes, <span>CPA / Owner</span></h5>
                   </div>
                   <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore in fugiat nulla pariatur.
+                    Since 1985, we’ve been committed to providing personalized
+                    and reliable tax services to individuals and businesses in
+                    our community. Our longevity is a testament to the trust our
+                    clients place in us, and we continue to focus on delivering
+                    the expertise and care they deserve.
                   </p>
                 </div>
               </div>
@@ -264,9 +267,18 @@
                 <img src="assets/img/client-img/Tax-services.jpg" alt="" />
               </div>
               <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority suffered alteration in some form, by injected
-                humour, or randomised which don't look even slightly believable.
+                At Associates Income Tax Services (AITS) of Visalia, we are a
+                full-service accounting, bookkeeping, and tax preparation firm
+                dedicated to serving both individuals and businesses. Our
+                experienced team provides a wide range of financial services
+                designed to meet the unique needs of each client. From tax
+                preparation and planning to accurate bookkeeping and
+                comprehensive accounting solutions, we are committed to
+                delivering personalized, reliable services that ensure our
+                clients' financial success. Whether you're an individual looking
+                for tax assistance or a business needing ongoing financial
+                support, AITS is here to provide the expertise and guidance you
+                need to thrive.
               </p>
               <div class="about-feature-list">
                 <div class="row">
@@ -317,115 +329,88 @@
           </div>
         </div>
         <div class="row">
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="200ms"
-          >
+          <!-- Team Member 1 -->
+          <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/about-img/Bradely-daniel.png" alt="" />
+                <img
+                  src="assets/img/about-img/Bradely-daniel.png"
+                  alt="Michael Hawkes"
+                  id="myBtn1"
+                />
               </div>
               <div class="team-details">
                 <h4>Michael Hawkes</h4>
                 <h6>CPA Owner</h6>
-                <!-- <p>CPA Owner</p> -->
-
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
+                <!-- <p>Click on the image to learn more.</p> -->
               </div>
             </div>
           </div>
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="400ms"
-          >
+          <!-- Team Member 2 -->
+          <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/about-img/Amanda.png" alt="" />
+                <img
+                  src="assets/img/about-img/Amanda.png"
+                  alt="Bradley Daniels"
+                  id="myBtn2"
+                />
               </div>
               <div class="team-details">
                 <h4>Bradley Daniels</h4>
                 <h6>Tax Preparer</h6>
-                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
+                <!-- <p>Click on the image to learn more.</p> -->
               </div>
             </div>
           </div>
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="600ms"
-          >
+          <!-- Team Member 3 -->
+          <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/about-img/Taylor-parks.png" alt="" />
+                <img
+                  src="assets/img/about-img/Taylor-parks.png"
+                  alt="Amanda Rodriguez"
+                  id="myBtn3"
+                />
               </div>
               <div class="team-details">
-                <h4>Amanda Rodriguez.</h4>
+                <h4>Amanda Rodriguez</h4>
                 <h6>Executive Assistant / Bookkeeper</h6>
-
-                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
-
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
+                <!-- <p>Click on the image to learn more.</p> -->
               </div>
             </div>
           </div>
-
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="600ms"
-          >
+          <!-- Team Member 4 -->
+          <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/about-img/4th-image.png" alt="" />
+                <img
+                  src="assets/img/about-img/4th-image.png"
+                  alt="Ashley Cox"
+                  id="myBtn4"
+                />
               </div>
               <div class="team-details">
-                <h4>Ashely Cox</h4>
+                <h4>Ashley Cox</h4>
                 <h6>EA Tax Preparer</h6>
-                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
-
-                <!-- <div class="social-link">
-                                      <a href="#">FB</a>
-                                      <a href="#">TW</a>
-                                      <a href="#">LI</a>
-                                      <a href="#">BE</a>
-                                  </div> -->
+                <!-- <p>Click on the image to learn more.</p> -->
               </div>
             </div>
           </div>
-
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="600ms"
-          >
+          <!-- Team Member 5 -->
+          <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/about-img/3rd-img.png" alt="" />
+                <img
+                  src="assets/img/about-img/3rd-img.png"
+                  alt="Taylor Parks"
+                  id="myBtn5"
+                />
               </div>
               <div class="team-details">
                 <h4>Taylor Parks</h4>
                 <h6>Executive Assistant / Bookkeeper</h6>
-                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
-
-                <!-- <div class="social-link">
-                                      <a href="#">FB</a>
-                                      <a href="#">TW</a>
-                                      <a href="#">LI</a>
-                                      <a href="#">BE</a>
-                                  </div> -->
+                <!-- <p>Click on the image to learn more.</p> -->
               </div>
             </div>
           </div>
@@ -433,6 +418,14 @@
       </div>
     </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div class="modal-header">Team Member Details</div>
+        <div class="modal-body" id="modalBody"></div>
+      </div>
+    </div>
     <!-- Contact Section  -->
     <div class="contact-area section-padding pt-0">
       <div class="container">
@@ -550,11 +543,11 @@
                     <p class="address">921 W Oak Ave Visalia, CA 93291</p>
 
                     <p class="number">
-                      <a href="tel:559.627.1339">559.627.1339</a>
+                      <a href="tel: (559) 627-1339"> (559) 627-1339</a>
                     </p>
 
-                    <p class="number">
-                      <a href="tel:559.627.1332">559.627.1332</a>
+                    <p class="number2">
+                      <a href="Fax:(559) 627-1332">(559) 627-1332</a>
                     </p>
 
                     <p class="email">
@@ -579,9 +572,9 @@
                 Facebook</a
               >
 
-              <a href="https://www.twitter.com/aitstax/"
-                ><img src="assets/img/output-onlinepngtoolstwitter.png" /> X</a
-              >
+              <!-- <a href="https://www.twitter.com/aitstax/"
+                ><img src="assets/img/output-onlinepngtoolstwitter.png" /> Twitter</a
+              > -->
 
               <a href="https://www.instagram.com/aitstax/"
                 ><img src="assets/img/output-onlinepngtoolsinstagram.png" />
@@ -764,6 +757,60 @@
     </script>
     <script>
       AOS.init();
+    </script>
+
+    <script>
+      // Modal and Click Event Handlers
+      var modal = document.getElementById("myModal");
+      var span = document.getElementsByClassName("close")[0];
+
+      var teamMembers = {
+        myBtn1:
+          " Michael is the proud owner of Associated Income Tax Services. With over 15 years of experience in the accounting industry, I have dedicated my career to helping individuals and businesses achieve financial clarity and success.  I hold a Bachelor of Science in Accounting with a minor in Business Administration from Brigham Young University-Idaho.  My approach is rooted in professionalism, personalized service, and a commitment to helping clients meet their financial goals.",
+        myBtn2:
+          "Bradley has been a valued member of Associated Income Tax Services (AITS) since 2020. A proud Navy veteran with five years of service, Bradley brings dedication and discipline to his role. He earned his Bachelor of Arts in Business Administration from Fresno Pacific University, where he developed a strong foundation in financial management and strategic planning.Bradley has a passion for rental properties and specializes in helping clients optimize profitability while maintaining compliance with tax regulations. His commitment to excellence and personalized service makes him a trusted resource for clients navigating the complexities of real estate investments.",
+        myBtn3:
+          "As a lead bookkeeper, Amanda Rodriguez specializes in organizing financial data and creating systems that support seamless business operations. She is a meticulous bookkeeper with a talent for reconciling accounts and managing payroll. Her attention to detail ensures clients' financial records are always up-to-date and error-free. Her dedication to precision is unmatched.",
+        myBtn4:
+          "Ashley brings nearly 20 years of expertise to the tax industry. While earning her Bachelor’s degree in Accounting at California State University, Fresno, she gained hands-on experience at the IRS, working in various departments, including the audit division. With a love for numbers and a passion for problem-solving, Ashley is dedicated to helping clients navigate tax complexities and alleviating the stress often associated with financial matters.",
+        myBtn5:
+          "Taylor is a dedicated professional with 10+ years of customer service experience and a BOA Certification from SJVC. A Visalia native, Taylor combines expertise in business operations with a passion for providing a positive client experience.",
+      };
+
+      // Add click event to each image
+      document.getElementById("myBtn1").onclick = function () {
+        openModal(teamMembers.myBtn1);
+      };
+      document.getElementById("myBtn2").onclick = function () {
+        openModal(teamMembers.myBtn2);
+      };
+      document.getElementById("myBtn3").onclick = function () {
+        openModal(teamMembers.myBtn3);
+      };
+      document.getElementById("myBtn4").onclick = function () {
+        openModal(teamMembers.myBtn4);
+      };
+      document.getElementById("myBtn5").onclick = function () {
+        openModal(teamMembers.myBtn5);
+      };
+
+      // Open the modal with the corresponding information
+      function openModal(content) {
+        modal.style.display = "block";
+        document.getElementById("modalBody").innerHTML = content;
+      }
+
+      // Close the modal when the user clicks on <span> (x)
+      span.onclick = function () {
+        modal.style.display = "none";
+      };
+
+      // Close the modal if the user clicks anywhere outside of the modal
+      window.onclick = function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
     </script>
   </body>
 </html>
