--- a/blog1.html
+++ b/blog1.html
@@ -355,11 +355,11 @@
                     <p class="address">921 W Oak Ave Visalia, CA 93291</p>
 
                     <p class="number">
-                      <a href="tel:559.627.1339">559.627.1339</a>
+                      <a href="tel: (559) 627-1339"> (559) 627-1339</a>
                     </p>
 
-                    <p class="number">
-                      <a href="tel:559.627.1332">559.627.1332</a>
+                    <p class="number2">
+                      <a href="Fax:(559) 627-1332">(559) 627-1332</a>
                     </p>
 
                     <p class="email">
@@ -385,8 +385,8 @@
               >
 
               <a href="https://www.twitter.com/aitstax/"
-                ><img src="assets/img/output-onlinepngtoolstwitter.png" /> X</a
-              >
+                ><img src="assets/img/output-onlinepngtoolstwitter.png" />
+              </a>
 
               <a href="https://www.instagram.com/aitstax/"
                 ><img src="assets/img/output-onlinepngtoolsinstagram.png" />
