--- a/Resources.html
+++ b/Resources.html
@@ -272,7 +272,7 @@
             </div>
             <div class="col-md-3">
               <div class="pdf-column">
-                <h3>digital_assets_2024</h3>
+                <h3>digital assets 2024</h3>
 
                 <a
                   href="assets/img/Deduction Worksheets for Website/digital_assets_2024.pdf"
