done with Changes

--- a/Resources.html
+++ b/Resources.html
@@ -153,7 +153,12 @@
     </div>
 
     <!-- Pdf Sections -->
-    <section class="top-pdf-sec down-sec">
+     <div class="video-background">
+    <video autoplay muted loop id="myVideo">
+      <source src="assets/img/law-flag.mp4" type="video/mp4">
+     
+    </video>
+    <section class="top-pdf-sec down-sec content-box">
       <div class="container">
         <div class="main-ccolumns">
           <div class="row">
@@ -272,7 +277,7 @@
             </div>
             <div class="col-md-3">
               <div class="pdf-column">
-                <h3>digital_assets_2024</h3>
+                <h3>digital assets 2024</h3>
 
                 <a
                   href="assets/img/Deduction Worksheets for Website/digital_assets_2024.pdf"
@@ -466,6 +471,7 @@
         </div>
       </div>
     </section>
+  </div>
 
     <!-- footer area -->
     <div class="footer-area">
