--- a/about.html
+++ b/about.html
@@ -322,9 +322,7 @@
           <div class="offset-xl-2 col-xl-8 text-center">
             <div class="section-title">
               <p>Our Team Members</p>
-              <h2>
-                Our dedicated tax advisor financial consulting will help you!
-              </h2>
+              <h2>Our dedicated tax advisor financial consulting will help you!</h2>
             </div>
           </div>
         </div>
@@ -333,16 +331,12 @@
           <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img
-                  src="assets/img/about-img/Bradely-daniel.png"
-                  alt="Michael Hawkes"
-                  id="myBtn1"
-                />
+                <img src="assets/img/about-img/Bradely-daniel.png" alt="Michael Hawkes" />
               </div>
               <div class="team-details">
                 <h4>Michael Hawkes</h4>
                 <h6>CPA Owner</h6>
-                <!-- <p>Click on the image to learn more.</p> -->
+                <p>Michael is the proud owner of Associated Income Tax Services.... <a href="#" class="read-more" data-details="Michael is the proud owner of Associated Income Tax Services. With over 15 years of experience in the accounting industry, I have dedicated my career to helping individuals and businesses achieve financial clarity and success.  I hold a Bachelor of Science in Accounting with a minor in Business Administration from Brigham Young University-Idaho.  My approach is rooted in professionalism, personalized service, and a commitment to helping clients meet their financial goals.">Read More</a></p>
               </div>
             </div>
           </div>
@@ -350,16 +344,14 @@
           <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img
-                  src="assets/img/about-img/Amanda.png"
-                  alt="Bradley Daniels"
-                  id="myBtn2"
-                />
+                <img src="assets/img/about-img/Amanda.png" alt="Bradley Daniels" />
               </div>
               <div class="team-details">
                 <h4>Bradley Daniels</h4>
                 <h6>Tax Preparer</h6>
-                <!-- <p>Click on the image to learn more.</p> -->
+                <p>Bradley has been a valued member of Associated Income Tax Services... <a href="#" class="read-more" data-details="Bradley has been a valued member of Associated Income Tax Services (AITS) since 2020. A proud Navy veteran with five years of service, Bradley brings dedication and discipline to his role. He earned his Bachelor of Arts in Business Administration from Fresno Pacific University, where he developed a strong foundation in financial management and strategic planning.
+
+                  Bradley has a passion for rental properties and specializes in helping clients optimize profitability while maintaining compliance with tax regulations. His commitment to excellence and personalized service makes him a trusted resource for clients navigating the complexities of real estate investments.">Read More</a></p>
               </div>
             </div>
           </div>
@@ -367,16 +359,12 @@
           <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img
-                  src="assets/img/about-img/Taylor-parks.png"
-                  alt="Amanda Rodriguez"
-                  id="myBtn3"
-                />
+                <img src="assets/img/about-img/Taylor-parks.png" alt="Amanda Rodriguez" />
               </div>
               <div class="team-details">
                 <h4>Amanda Rodriguez</h4>
                 <h6>Executive Assistant / Bookkeeper</h6>
-                <!-- <p>Click on the image to learn more.</p> -->
+                <p>As a lead bookkeeper, Amanda Rodriguez specializes... <a href="#" class="read-more" data-details="As a lead bookkeeper, Amanda Rodriguez specializes in organizing financial data and creating systems that support seamless business operations. She is a meticulous bookkeeper with a talent for reconciling accounts and managing payroll. Her attention to detail ensures clients' financial records are always up-to-date and error-free. Her dedication to precision is unmatched.">Read More</a></p>
               </div>
             </div>
           </div>
@@ -384,16 +372,12 @@
           <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img
-                  src="assets/img/about-img/4th-image.png"
-                  alt="Ashley Cox"
-                  id="myBtn4"
-                />
+                <img src="assets/img/about-img/4th-image.png" alt="Ashley Cox" />
               </div>
               <div class="team-details">
                 <h4>Ashley Cox</h4>
                 <h6>EA Tax Preparer</h6>
-                <!-- <p>Click on the image to learn more.</p> -->
+                <p>Ashley brings nearly 20 years of expertise to the tax industry... <a href="#" class="read-more" data-details="Ashley brings nearly 20 years of expertise to the tax industry. While earning her Bachelor’s degree in Accounting at California State University, Fresno, she gained hands-on experience at the IRS, working in various departments, including the audit division. With a love for numbers and a passion for problem-solving, Ashley is dedicated to helping clients navigate tax complexities and alleviating the stress often associated with financial matters.">Read More</a></p>
               </div>
             </div>
           </div>
@@ -401,23 +385,19 @@
           <div class="col-xl-4 col-lg-6 col-md-6 col-12">
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img
-                  src="assets/img/about-img/3rd-img.png"
-                  alt="Taylor Parks"
-                  id="myBtn5"
-                />
+                <img src="assets/img/about-img/3rd-img.png" alt="Taylor Parks" />
               </div>
               <div class="team-details">
                 <h4>Taylor Parks</h4>
                 <h6>Executive Assistant / Bookkeeper</h6>
-                <!-- <p>Click on the image to learn more.</p> -->
+                <p>Taylor is a dedicated professional with 10+ years ... <a href="#" class="read-more" data-details="Taylor is a dedicated professional with 10+ years of customer service experience and a BOA Certification from SJVC. A Visalia native, Taylor combines expertise in business operations with a passion for providing a positive client experience.">Read More</a></p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    
     <!-- The Modal -->
     <div id="myModal" class="modal">
       <div class="modal-content">
@@ -759,58 +739,35 @@
       AOS.init();
     </script>
 
-    <script>
-      // Modal and Click Event Handlers
-      var modal = document.getElementById("myModal");
-      var span = document.getElementsByClassName("close")[0];
+    
 
-      var teamMembers = {
-        myBtn1:
-          " Michael is the proud owner of Associated Income Tax Services. With over 15 years of experience in the accounting industry, I have dedicated my career to helping individuals and businesses achieve financial clarity and success.  I hold a Bachelor of Science in Accounting with a minor in Business Administration from Brigham Young University-Idaho.  My approach is rooted in professionalism, personalized service, and a commitment to helping clients meet their financial goals.",
-        myBtn2:
-          "Bradley has been a valued member of Associated Income Tax Services (AITS) since 2020. A proud Navy veteran with Six years of service, Bradley brings dedication and discipline to his role. He earned his Bachelor of Arts in Business Administration from Fresno Pacific University, where he developed a strong foundation in financial management and strategic planning.Bradley has a passion for rental properties and specializes in helping clients optimize profitability while maintaining compliance with tax regulations. His commitment to excellence and personalized service makes him a trusted resource for clients navigating the complexities of real estate investments.",
-        myBtn3:
-          "As a lead bookkeeper, Amanda Rodriguez specializes in organizing financial data and creating systems that support seamless business operations. She is a meticulous bookkeeper with a talent for reconciling accounts and managing payroll. Her attention to detail ensures clients' financial records are always up-to-date and error-free. Her dedication to precision is unmatched.",
-        myBtn4:
-          "Ashley brings nearly 20 years of expertise to the tax industry. While earning her Bachelor’s degree in Accounting at California State University, Fresno, she gained hands-on experience at the IRS, working in various departments, including the audit division. With a love for numbers and a passion for problem-solving, Ashley is dedicated to helping clients navigate tax complexities and alleviating the stress often associated with financial matters.",
-        myBtn5:
-          "Taylor is a dedicated professional with 10+ years of customer service experience and a BOA Certification from SJVC. A Visalia native, Taylor combines expertise in business operations with a passion for providing a positive client experience.",
-      };
+<script>
+  var modal = document.getElementById("myModal");
+  var modalBody = document.getElementById("modalBody");
+  var closeBtn = document.getElementsByClassName("close")[0];
 
-      // Add click event to each image
-      document.getElementById("myBtn1").onclick = function () {
-        openModal(teamMembers.myBtn1);
-      };
-      document.getElementById("myBtn2").onclick = function () {
-        openModal(teamMembers.myBtn2);
-      };
-      document.getElementById("myBtn3").onclick = function () {
-        openModal(teamMembers.myBtn3);
-      };
-      document.getElementById("myBtn4").onclick = function () {
-        openModal(teamMembers.myBtn4);
-      };
-      document.getElementById("myBtn5").onclick = function () {
-        openModal(teamMembers.myBtn5);
-      };
+  // Add event listener to all "Read More" links
+  var readMoreLinks = document.querySelectorAll(".read-more");
+  readMoreLinks.forEach(function(link) {
+    link.addEventListener("click", function(e) {
+      e.preventDefault();  // Prevent default link behavior
+      var details = this.getAttribute("data-details"); // Get the details from data-attribute
+      modalBody.innerHTML = details; // Set modal body content
+      modal.style.display = "block"; // Show the modal
+    });
+  });
 
-      // Open the modal with the corresponding information
-      function openModal(content) {
-        modal.style.display = "block";
-        document.getElementById("modalBody").innerHTML = content;
-      }
+  // Close modal when clicking on the "x" button
+  closeBtn.onclick = function() {
+    modal.style.display = "none";
+  }
 
-      // Close the modal when the user clicks on <span> (x)
-      span.onclick = function () {
-        modal.style.display = "none";
-      };
-
-      // Close the modal if the user clicks anywhere outside of the modal
-      window.onclick = function (event) {
-        if (event.target == modal) {
-          modal.style.display = "none";
-        }
-      };
-    </script>
+  // Close modal when clicking outside the modal
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+</script>
   </body>
 </html>
