--- a/index1.html
+++ b/index1.html
@@ -790,10 +790,11 @@
                                         Visalia, CA 93291
                                     </p>
                                     <p class="number">
-                                        <a href="tel:(559) 627-1339">(559) 627-1339</a>
+                                        <a href="tel:(559) 627-1339">Ph:(559) 627-1339</a>
                                     </p>
                                     <p class="number2">
-                                        <a href="Fax:(559) 627-1332">(559) 627-1332</a>
+                                        <a href="Fax:(559) 627-1332">
+                                            (559) 627-1332</a>
                                     </p>
                                     <p class="email">
                                         <a href="mailto:info@aitstax.com">info@aitstax.com</a>
