added the changes

--- a/index1.html
+++ b/index1.html
@@ -144,7 +144,7 @@
                             <h1>Associated Income Tax Services</h1>
                             <div class="buttons">
                                 <a href="#schedule" class="main-btn">Schedule Now</a>
-                                <a href="https://www.aitstax.com/law/" class="main-btn">Law Enforcement Special!!</a>
+                                <!-- <a href="https://www.aitstax.com/law/" class="main-btn">Law Enforcement Special!!</a> -->
                             </div>
                         </div>
                     </div>
