--- a/blog1.html
+++ b/blog1.html
@@ -359,7 +359,7 @@
                     </p>
 
                     <p class="number2">
-                      <a href="Fax:(559) 627-1332">(559) 627-1332</a>
+                      <a href="Fax:(559) 627-1332">Fax:(559) 627-1332</a>
                     </p>
 
                     <p class="email">
