--- a/index1.html
+++ b/index1.html
@@ -794,7 +794,7 @@
                                     </p>
                                     <p class="number2">
                                         <a href="Fax:(559) 627-1332">
-                                            (559) 627-1332</a>
+                                          Fax:  (559) 627-1332</a>
                                     </p>
                                     <p class="email">
                                         <a href="mailto:info@aitstax.com">info@aitstax.com</a>
