--- a/Resources.html
+++ b/Resources.html
@@ -87,17 +87,17 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#about"
+                        <a class="nav-link" href="/about.html"
                           >About Us
                         </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#blog">Blog </a>
+                        <a class="nav-link" href="/blog2.html">Blog </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#resource"
+                        <a class="nav-link" href="/Resources.html"
                           >Resources
                         </a>
                       </li>
@@ -514,15 +514,15 @@
                       </li>
                       <li>
                         <i class="las la-check-circle"></i>
-                        <a href="#about">About Us</a>
+                        <a href="about.html">About Us</a>
                       </li>
                       <li>
                         <i class="las la-check-circle"></i>
-                        <a href="#blog">News</a>
+                        <a href="blog2.html">News</a>
                       </li>
                       <li>
                         <i class="las la-check-circle"></i>
-                        <a href="#resource">Resources</a>
+                        <a href="Resources.html">Resources</a>
                       </li>
                     </ul>
                   </div>
