--- a/about.html
+++ b/about.html
@@ -122,17 +122,17 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#about"
+                        <a class="nav-link" href="/about.html"
                           >About Us
                         </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#blog">Blog </a>
+                        <a class="nav-link" href="/blog2.html">Blog </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#resource"
+                        <a class="nav-link" href="Resources.html"
                           >Resources
                         </a>
                       </li>
@@ -464,22 +464,22 @@
                     <ul>
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#home">Home</a>
+                        ><a href="/index1.html">Home</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#about">About Us</a>
+                        ><a href="/about.html">About Us</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#blog">News</a>
+                        ><a href="/blog2.html">News</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#resource">Resources</a>
+                        ><a href="/Resources.html">Resources</a>
                       </li>
                     </ul>
                   </div>
