--- a/blog1.html
+++ b/blog1.html
@@ -205,9 +205,9 @@
               <div class="blog-meta">
                 <p><i class="las la-calendar-alt"></i>22 October 2024</p>
               </div>
-              <div class="blog-meta">
+              <!-- <div class="blog-meta">
                 <p><i class="las la-comments"></i>02 Comments</p>
-              </div>
+              </div> -->
               <div class="blog-meta">
                 <p><i class="las la-user-alt"></i>By Admin</p>
               </div>
