--- a/blog2.html
+++ b/blog2.html
@@ -123,17 +123,17 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#about"
+                        <a class="nav-link" href="/about.html"
                           >About Us
                         </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#blog">Blog </a>
+                        <a class="nav-link" href="/blog2.html">Blog </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="/index1.html#resource"
+                        <a class="nav-link" href="/Resources.html"
                           >Resources
                         </a>
                       </li>
@@ -242,17 +242,17 @@
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#about">About Us</a>
+                        ><a href="/about.html">About Us</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#blog">News</a>
+                        ><a href="/blog2.html">News</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="/index1.html#resource">Resources</a>
+                        ><a href="/Resources.html">Resources</a>
                       </li>
                     </ul>
                   </div>
