--- a/Resources.html
+++ b/Resources.html
@@ -144,7 +144,7 @@
             <div class="header-top-link text-center">
               <h4 class="text-white">
                 Associated Income Tax Services
-                <a href="#contact">Contact Us</a>
+                <a href="index1.html#contact">Contact Us</a>
               </h4>
             </div>
           </div>
@@ -510,7 +510,7 @@
                     <ul>
                       <li>
                         <i class="las la-check-circle"></i>
-                        <a href="#home">Home</a>
+                        <a href="index1.html#home">Home</a>
                       </li>
                       <li>
                         <i class="las la-check-circle"></i>
